# ticket-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  build.rs  opencode.json
.tickets/: tr-04qd.md  tr-09dq.md  tr-13ck.md  tr-23te.md  tr-2ns4.md  tr-3b27.md  tr-3kr6.md  tr-4936.md  tr-4cb4.md  tr-533b.md  tr-5fgx.md  tr-6q83.md  tr-6u6p.md  tr-7bdf.md  tr-7vfp.md  tr-8496.md  tr-85jk.md  tr-889d.md  tr-99go.md  tr-9c78.md  tr-9e03.md  tr-9j1n.md  tr-9thi.md  tr-aaqe.md  tr-ab80.md  tr-b3ex.md  tr-b552.md  tr-b9bb.md  tr-bs17.md  tr-c553.md  tr-ca22.md  tr-d145.md  tr-d810.md  tr-d9da.md  tr-dbf8.md  tr-e078.md  tr-eqrh.md  tr-f5e2.md  tr-fbj8.md  tr-fz7v.md  (+20 more)
completions/: _tk
features/: id_resolution.feature  input_resolution.feature  ticket_config.feature  ticket_dependencies.feature  ticket_directory.feature  ticket_listing.feature  ticket_plugins.feature  ticket_search.feature
features/steps/: ticket_steps.py
src/: cli.rs  complete.rs  config.rs  error.rs  format.rs  highlight.rs  id.rs  input.rs  lib.rs  main.rs  pager.rs  plugin.rs  store.rs  suggest.rs  ticket.rs
src/commands/: create.rs  dep.rs  edit.rs  link.rs  list.rs  mod.rs  note.rs  query.rs  search.rs  show.rs  show_config.rs  status.rs  tree.rs  update.rs
