[package]
name = "ticket-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ticket"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
console = "0.15"
git2 = { version = "0.20", default-features = false }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
